--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Project demo of setting up a nodeJS project with ReactJS frontend",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev:server": "nodemon index.js",
+    "dev:client": "npm start --prefix client",
+    "dev": "npm-run-all --parallel dev:*",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -13,6 +17,11 @@
   "author": "Edmund Park",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.6",
+    "npm-run-all": "^4.1.3"
   }
 }
